fix: navbar contrast issue

--- a/front-end/src/scss/bootstrap/_bootstrap.scss
+++ b/front-end/src/scss/bootstrap/_bootstrap.scss
@@ -4,6 +4,9 @@
 $light             : $color-primary;
 $primary           : $color-primary;
 
+//navbar
+$navbar-light-color: black;
+
 // Card
 $card-border-color : $color-primary;
 $card-border-width : 3px;
